# svdi-cli

./: LICENCE  README.md  pyproject.toml
.github/workflows/: release.yml
svdi/: cli.py  constant.py  main.py
svdi/file/: format.py
svdi/svd/: basic_rSVD.py  numpy_default.py  pcafast.py  power_iterations.py  result.py
